--- a/style.css
+++ b/style.css
@@ -156,6 +156,29 @@ body::after {
     opacity: 0.6;
 }
 
+.insta-link {
+    font-size: 22pt;
+    font-family: 'Helvetica Neue', monospace;
+    color: #ffd4ff;
+    text-shadow: 0 0 4px #ffffff;
+    opacity: 0.7;
+    margin-top: 4rem;
+    padding-bottom: 3rem;
+    white-space: pre;
+}
+
+.insta-link a {
+    color: inherit;
+    text-decoration: none;
+    border-bottom: 1px dotted #ffd4ff;
+    transition: opacity 0.3s ease;
+}
+
+.insta-link a:hover {
+    opacity: 1;
+    text-shadow: 0 0 6px #fff;
+}
+
 @keyframes blink {
     50% {
         opacity: 0;
