--- a/style.css
+++ b/style.css
@@ -189,7 +189,8 @@ body::after {
 @media (max-width: 800px) {
 
     .title,
-    .timestamp {
+    .timestamp,
+    .insta-link {
         font-size: 1rem;
         padding: 0 1rem;
     }
